--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/seangrant118/Bamazon/issues"
   },
-  "homepage": "https://github.com/seangrant118/Bamazon#readme"
+  "homepage": "https://github.com/seangrant118/Bamazon#readme",
+  "dependencies": {
+    "inquirer": "^6.2.0",
+    "mysql": "^2.16.0"
+  }
 }
